Reposition map/list modes to stop switchView btns overlapping list scroll bar

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -27,7 +27,7 @@
     position: absolute;
     width: 200%;
     height: 100%;
-    left: 0;
+    left: -100%;
     right: auto;
     transition-property: left;
     transition-duration: 0.5s;
@@ -35,7 +35,7 @@
 }
 
 .app__viewWrapper.showMap {
-    left: -100%;
+    left: 0;
 }
 
 .app__listContainer,
@@ -46,13 +46,14 @@
 }
 
 .app__listContainer{
-    left: 0;
+    right: 0;
     background-color: #00F;
-    overflow: scroll-y;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .app__mapContainer {
-    right: 0;
+    left: 0;
     background-color: #0F0;
     overflow: hidden;
 }
@@ -88,13 +89,13 @@
 }
 
 .switchView.showList {
-    left: 0;
+    right: 0;
     background-image: url('../images/list-icon.svg');
-    border-radius: 0px 10px 10px 0px;
+    border-radius: 10px 0px 0px 10px;
 }
 
 .switchView.showMap {
-    right: 0;
+    left: 0;
     background-image: url('../images/map-icon.svg');
-    border-radius: 10px 0px 0px 10px;
+    border-radius: 0px 10px 10px 0px;
 }
